@@ -1,6 +1,9 @@
 devel
 -----
 
+* UI: replicationFactor of a collection is now changeable in a cluster
+  environment
+
 * added C++ implementations for AQL function `SUBSTRING()
 
 * make AQL `DISTINCT` not change the order of the results it is applied on
